<resources>
    <string name="app_name">RecyclerViewApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_default_text">Some default text</string>
    <string name="rover_text">Rover:</string>
    <string name="default_text">Default text</string>
    <string name="sol_text">Sol:</string>
    <string name="def_4135">4135</string>
    <string name="camera">Camera:</string>
    <string name="data">Date:</string>
</resources>